--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -38,10 +38,22 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Create release branch
+      - name: Create or checkout release branch
         run: |
-          BRANCH="release-${{ inputs.version }}"
-          git checkout -b "$BRANCH"
+          VERSION="${{ inputs.version }}"
+          MAJOR=$(echo "$VERSION" | cut -d. -f1 | sed 's/v//')
+          MINOR=$(echo "$VERSION" | cut -d. -f2)
+          BRANCH="release-$MAJOR.$MINOR"
+
+          if git show-ref --verify --quiet refs/remotes/origin/"$BRANCH"; then
+            echo "Branch $BRANCH exists, checking it out"
+            git checkout "$BRANCH"
+          else
+            echo "Branch $BRANCH does not exist, creating from ${{ steps.base.outputs.base_branch }}"
+            git checkout -b "$BRANCH"
+            git push -u origin "$BRANCH"
+          fi
+
           echo "branch=$BRANCH" >> $GITHUB_ENV
 
       - name: Update version
