--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,13 +1,11 @@
 name: Create Release
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [main, dev-v3]
+  repository_dispatch:
+    types: [create-release]
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.title, 'Prepare release')
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -24,7 +22,7 @@ jobs:
       - name: Extract version and setup release branch
         id: version
         run: |
-          TITLE="${{ github.event.pull_request.title }}"
+          TITLE="${{ github.event.client_payload.pr_title }}"
           VERSION=$(echo "$TITLE" | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+')
           MAJOR=$(echo "$VERSION" | cut -d. -f1 | sed 's/v//')
           MINOR=$(echo "$VERSION" | cut -d. -f2)
@@ -36,7 +34,7 @@ jobs:
           # Create release branch if it doesn't exist
           if ! git show-ref --verify --quiet refs/remotes/origin/"$RELEASE_BRANCH"; then
             echo "Creating release branch $RELEASE_BRANCH"
-            git checkout -b "$RELEASE_BRANCH" "${{ github.event.pull_request.base.ref }}"
+            git checkout -b "$RELEASE_BRANCH" "${{ github.event.client_payload.pr_base_ref }}"
             git push -u origin "$RELEASE_BRANCH"
           else
             echo "Release branch $RELEASE_BRANCH already exists"
@@ -45,7 +43,7 @@ jobs:
 
       - name: Cherry-pick version commit
         run: |
-          COMMIT_SHA="${{ github.event.pull_request.merge_commit_sha }}"
+          COMMIT_SHA="${{ github.event.client_payload.merge_commit_sha }}"
           git cherry-pick "$COMMIT_SHA"
           git push origin "${{ steps.version.outputs.release_branch }}"
 
