--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -10,20 +10,14 @@ jobs:
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.title, 'Prepare release')
     runs-on: ubuntu-latest
     steps:
-      - name: Extract commit SHA and trigger release
-        run: |
-          PR_BODY="${{ github.event.pull_request.body }}"
-          COMMIT_SHA=$(echo "$PR_BODY" | grep -oE 'Version commit: [a-f0-9]{40}' | cut -d' ' -f3)
-
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/dispatches \
-            -d "{
-              \"event_type\": \"create-release\",
-              \"client_payload\": {
-                \"pr_title\": \"${{ github.event.pull_request.title }}\",
-                \"pr_base_ref\": \"${{ github.event.pull_request.base.ref }}\",
-                \"version_commit_sha\": \"$COMMIT_SHA\"
-              }
-            }"
+      - name: Trigger release workflow
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.RELEASE_TOKEN }}
+          repository: ${{ github.repository }}
+          event-type: create-release
+          client-payload: |
+            {
+              "pr_title": "${{ github.event.pull_request.title }}",
+              "pr_base_ref": "${{ github.event.pull_request.base.ref }}"
+            }
