--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -43,7 +43,8 @@ jobs:
 
       - name: Cherry-pick version commit
         run: |
-          COMMIT_SHA="${{ github.event.client_payload.version_commit_sha }}"
+          VERSION="${{ steps.version.outputs.version }}"
+          COMMIT_SHA=$(git log --grep="Prepare release $VERSION" --format="%H" -1 "origin/${{ github.event.client_payload.pr_base_ref }}")
           git cherry-pick "$COMMIT_SHA"
           git push origin "${{ steps.version.outputs.release_branch }}"
 
