--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -31,13 +31,13 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "release_branch=$RELEASE_BRANCH" >> $GITHUB_OUTPUT
 
-          # Create release branch if it doesn't exist
+          # Create or checkout release branch (persistent across patch releases)
           if ! git show-ref --verify --quiet refs/remotes/origin/"$RELEASE_BRANCH"; then
-            echo "Creating release branch $RELEASE_BRANCH"
-            git checkout -b "$RELEASE_BRANCH" "origin/${{ github.event.client_payload.pr_base_ref }}"
+            echo "Creating new release branch $RELEASE_BRANCH"
+            git checkout -b "$RELEASE_BRANCH"
             git push -u origin "$RELEASE_BRANCH"
           else
-            echo "Release branch $RELEASE_BRANCH already exists"
+            echo "Checking out existing release branch $RELEASE_BRANCH"
             git checkout "$RELEASE_BRANCH"
           fi
 
@@ -46,6 +46,7 @@ jobs:
           VERSION="${{ steps.version.outputs.version }}"
           # Find the actual commit (not merge commit) with exact subject line
           COMMIT_SHA=$(git log --format="%H %s" "origin/${{ github.event.client_payload.pr_base_ref }}" | grep "^[a-f0-9]\{40\} Prepare release $VERSION$" | head -1 | cut -d' ' -f1)
+          echo "Cherry-picking version commit $COMMIT_SHA"
           git cherry-pick "$COMMIT_SHA"
           git push origin "${{ steps.version.outputs.release_branch }}"
 
