--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -60,9 +60,17 @@ jobs:
           git tag "${{ steps.version.outputs.version }}"
           git push origin "${{ steps.version.outputs.version }}"
 
-          gh release create "${{ steps.version.outputs.version }}" \
-            --title "${{ steps.version.outputs.version }}" \
-            --notes "Release ${{ steps.version.outputs.version }}"
+          VERSION="${{ steps.version.outputs.version }}"
+          if [[ "$VERSION" == *"-"* ]]; then
+            gh release create "$VERSION" \
+              --title "$VERSION" \
+              --notes "Release $VERSION" \
+              --prerelease
+          else
+            gh release create "$VERSION" \
+              --title "$VERSION" \
+              --notes "Release $VERSION"
+          fi
 
       - name: Trigger docs update
         uses: peter-evans/repository-dispatch@v3
