--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -22,12 +22,9 @@ jobs:
       - name: Extract version and checkout release branch
         id: version
         run: |
-          TITLE="${{ github.event.client_payload.pr_title }}"
-          VERSION=$(echo "$TITLE" | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?')
-          MAJOR=$(echo "$VERSION" | cut -d. -f1 | sed 's/v//')
-          MINOR=$(echo "$VERSION" | cut -d. -f2)
-          RELEASE_BRANCH="release-$MAJOR.$MINOR"
-          BASE_BRANCH="${{ github.event.client_payload.pr_base_ref }}"
+          VERSION="${{ github.event.client_payload.version }}"
+          RELEASE_BRANCH="${{ github.event.client_payload.release_branch }}"
+          BASE_BRANCH="${{ github.event.client_payload.base_branch }}"
 
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "release_branch=$RELEASE_BRANCH" >> $GITHUB_OUTPUT
